--- a/src/main/resources/static/css/scss/base/_reset.scss
+++ b/src/main/resources/static/css/scss/base/_reset.scss
@@ -40,6 +40,10 @@ button:focus {
     outline: none;
 }
 
+.display_none {
+    display: none;
+}
+
 input:-webkit-autofill {
     -webkit-box-shadow: 0 0 0 30px transparent inset;
     -webkit-text-fill-color: #000;
