--- a/src/main/resources/static/css/scss/pages/_profile.scss
+++ b/src/main/resources/static/css/scss/pages/_profile.scss
@@ -12,75 +12,14 @@
         width: 80%;
 
         table {
-            width: 100%;
-            position: relative;
-            margin: 10px 0 0;
-            border: 1px solid #d7d5d5;
-            border-top: 0;
-            border-left-width: 0;
-            border-right-width: 0;
-            color: #fff;
-            line-height: 1.5;
-
             tbody {
-                font-size: 12px;
-                color: #353535;
-
-                th {
-                    padding: 11px 0 10px 18px;
-                    border: 1px solid #dfdfdf;
-                    border-bottom-width: 0;
-                    border-left-width: 0;
-                    border-right-width: 0;
-                    font-weight: normal;
-                    vertical-align: middle;
-
-                    span {
-                        color: #008BCC;
-                    }
-                }
-
                 td {
-                    border-top: 1px solid #dfdfdf;
-                    vertical-align: middle;
-                    padding: 11px 0 10px 18px;
-
-                    span.id_input_re_1,
-                    span.id_input_re_2,
-                    span.mail_input_re_1,
-                    span.mail_input_re_2,
-                    span.final_id_ck,
-                    span.final_pw_ck,
-                    span.final_pwck_ck,
-                    span.final_name_ck,
-                    span.final_mail_ck,
-                    span.final_addr_ck,
-                    span.pwck_input_re_1,
-                    span.pwck_input_re_2,
-                    span.need_mail_check {
-                        display: none;
+                    span {
+                        margin-top: 2px;
                     }
 
-                    input {
-                        height: 30px;
-                        padding: 2px 4px;
-                        border: 1px solid #d5d5d5;
-                        width: 200px;
-                    }
-
-                    input:focus::placeholder {
-                        color: transparent;
-                    }
-
-                    select {
-                        width: 60px;
-                        height: 30px;
-                        line-height: 30px;
-                        min-height: 30px;
-                        border: 1px solid #ddd;
-                        padding: 0 10px 0 5px;
-                        background-color: #fff;
-                        font-size: 12px;
+                    select.mail_select {
+                        width: 125px;
                     }
 
                     button.send_mail,
@@ -98,10 +37,7 @@
                     }
 
                     button.send_mail,
-                    button.check_number {
-                        width: 55px;
-                    }
-
+                    button.check_number,
                     button.find_addr {
                         width: 90px;
                     }
@@ -114,6 +50,14 @@
             text-align: center;
             display: block;
             margin-top: 30px;
+        }
+    }
+}
+
+@media (max-width: 1100px) {
+    .modify_body {
+        form {
+            width: 100%;
         }
     }
 }
