--- a/src/main/resources/static/css/scss/pages/_signUp.scss
+++ b/src/main/resources/static/css/scss/pages/_signUp.scss
@@ -1,114 +1,136 @@
 /* signUp page start */
 .signup_body {
-    display: flex;
-    justify-content: center;
 
-    form {
-        width: 80%;
+    .form_wrap {
+        display: flex;
+        justify-content: center;
 
-        table {
+        form {
             width: 100%;
-            position: relative;
-            margin: 10px 0 0;
-            border: 1px solid #d7d5d5;
-            border-top: 0;
-            border-left-width: 0;
-            border-right-width: 0;
-            color: #fff;
-            line-height: 1.5;
 
-            tbody {
-                font-size: 12px;
-                color: #353535;
+            table {
+                tbody {
+                    td {
 
-                th {
-                    padding: 11px 0 10px 18px;
-                    border: 1px solid #dfdfdf;
-                    border-bottom-width: 0;
-                    border-left-width: 0;
-                    border-right-width: 0;
-                    font-weight: normal;
-                    vertical-align: middle;
-
-                    span {
-                        color: #008BCC;
-                    }
-                }
-
-                td {
-                    border-top: 1px solid #dfdfdf;
-                    vertical-align: middle;
-                    padding: 11px 0 10px 18px;
-
-                    span.id_input_re_1,
-                    span.id_input_re_2,
-                    span.mail_input_re_1,
-                    span.mail_input_re_2,
-                    span.final_id_ck,
-                    span.final_pw_ck,
-                    span.final_pwck_ck,
-                    span.final_name_ck,
-                    span.final_mail_ck,
-                    span.final_addr_ck,
-                    span.pwck_input_re_1,
-                    span.pwck_input_re_2,
-                    span.need_mail_check {
-                        display: none;
-                    }
-
-                    input {
-                        height: 30px;
-                        padding: 2px 4px;
-                        border: 1px solid #d5d5d5;
-                        width: 200px;
-                    }
-
-                    input:focus::placeholder {
-                        color: transparent;
-                    }
-
-                    select {
-                        width: 60px;
-                        height: 30px;
-                        line-height: 30px;
-                        min-height: 30px;
-                        border: 1px solid #ddd;
-                        padding: 0 10px 0 5px;
-                        background-color: #fff;
-                        font-size: 12px;
-                    }
-
-                    button.send_mail,
-                    button.check_number,
-                    button.find_addr {
-                        padding: 0;
-                        height: 30px;
-                        margin-bottom: 2px;
-                        border: 1px solid #e2e2e2;
-                        background: white;
-
-                        &:hover {
-                            border: 1px solid black;
+                        span {
+                            margin-top: 2px;
                         }
-                    }
 
-                    button.send_mail,
-                    button.check_number {
-                        width: 55px;
-                    }
+                        select.mail_select {
+                            width: 125px;
+                        }
 
-                    button.find_addr {
-                        width: 90px;
+                        button.send_mail,
+                        button.check_number,
+                        button.find_addr {
+                            padding: 0;
+                            height: 30px;
+                            margin-bottom: 2px;
+                            border: 1px solid #e2e2e2;
+                            background: white;
+
+                            &:hover {
+                                border: 1px solid black;
+                            }
+                        }
+
+                        button.send_mail,
+                        button.check_number,
+                        button.find_addr {
+                            width: 90px;
+                        }
                     }
                 }
             }
-        }
 
-        .btn_box {
-            padding: 10px 0;
-            text-align: center;
-            display: block;
-            margin-top: 30px;
+            .agree_wrap {
+                margin-top: 30px;
+
+                .check_all {
+                    padding: 20px;
+                    margin-left: auto;
+                    margin-right: auto;
+                    border: 1px solid #e5e5e5;
+                    color: #404040;
+                    background-color: #fbfafa;
+                    display: flex;
+                    align-items: center;
+
+                    input {
+                        width: 14px;
+                        height: 14px;
+                    }
+
+                    label {
+                        font-size: 16px;
+                        color: #353535;
+                        line-height: 24px;
+                        font-weight: bold;
+                        margin-left: 5px;
+                    }
+                }
+
+                .agree {
+                    border: 1px solid #e5e5e5;
+                    border-top: none;
+                    background-color: #fbfafa;
+                    padding: 20px;
+                    margin-left: auto;
+                    margin-right: auto;
+
+                    h3 {
+                        margin: 0 0 10px;
+                        font-size: 14px;
+                        color: #353535;
+                        font-weight: bold;
+                    }
+
+                    .content {
+                        overflow: auto;
+                        height: 110px;
+                        padding: 20px;
+                        border: 1px solid #fff;
+                        background: #fff;
+
+                        p {
+                            padding: 0 0 17px;
+                            margin: 0;
+                            line-height: 1.8;
+                            font-size: 12px;
+                            color: #747474;
+                        }
+                    }
+
+                    .check {
+                        padding: 20px 0 0 0;
+                        color: #202020;
+                        font-size: 13px;
+                        line-height: 24px;
+                        margin: 0;
+
+                        input {
+                            display: inline-block;
+                            position: relative;
+                            vertical-align: top;
+                            margin: 5px 0 0 2px;
+                            width: 13px;
+                            height: 13px;
+                            border: 0;
+                        }
+
+                        label {
+                            margin: 0 4px 0 2px;
+                        }
+                    }
+                }
+            }
+
+            .btn_box {
+                padding: 10px 0;
+                text-align: center;
+                display: block;
+                margin-top: 30px;
+            }
         }
     }
 }
