--- a/src/main/resources/templates/account/findPass.html
+++ b/src/main/resources/templates/account/findPass.html
@@ -39,6 +39,17 @@
                                     <col style="width:auto;">
                                 </colgroup>
                                 <tbody>
+                                <tr>
+                                    <th scope="row">
+                                        <label for="userIdentifier">아이디 <span>*</span></label>
+                                    </th>
+                                    <td>
+                                        <div class="id_input_box">
+                                            <input class="user_email" name="userIdentifier" id="userIdentifier" type="text">
+                                            가입시 입력한 아이디를 입력하세요.
+                                        </div>
+                                    </td>
+                                </tr>
                                     <tr>
                                         <th scope="row">
                                             <label for="email">이메일 <span>*</span></label>
